# MLOPs-Project

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  mlflow.yml  parameters.yml
data/01_raw/: online_shoppers_sample.csv
data/06_models/: feature_columns.json
data/06_models/champion_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
docs/: Project Report.docx  REPORT.md
helpers/: PROJECT_PLAN_MERGED.md  data_download.md  implementation_plan.md  tasks.md
notebooks/: 01_eda.ipynb
serving/: Dockerfile  requirements.txt
serving/app/: main.py
serving/k8s/: README.md  deployment.yaml  deployment_evidence.txt  hpa.yaml  service.yaml
src/online_shoppers/: __init__.py  __main__.py  settings.py
src/online_shoppers/pipelines/data_cleaning/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/data_drift/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/data_feat_engineering/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/data_quality/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/data_split/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/feature_store/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/model_optimisation/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/model_predict/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/model_selection/: __init__.py  nodes.py  pipeline.py
src/online_shoppers/pipelines/model_train/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_data_cleaning.py  test_data_drift.py  test_data_quality.py  test_data_split.py  test_model_optimisation.py  test_model_predict.py  test_pipeline_registry.py  test_project.py
