[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "online_shoppers"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.3.1",
]

[project.scripts]
online-shoppers-mlops = "online_shoppers.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "online_shoppers.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "online_shoppers"
project_name = "Online Shoppers MLOps"
kedro_init_version = "1.3.1"
tools = "['Lint', 'Test']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
src = ["src"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # print found
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Magic-value comparisons are idiomatic in test assertions.
"tests/**" = ["PLR2004"]

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/online_shoppers -ra
"""
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
